--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <version>3.17</version>
         </dependency>
 
+        <!--spring mvc-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>4.2.0.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
